--- a/comprarfin.html
+++ b/comprarfin.html
@@ -31,7 +31,7 @@
 						<li><a href="paginaPersonal.html">Mi página</a></li>
 						<li><a href="protagonizar.html">Protagonizar</a></li>
 						<li><a href="archivos.html">Archivos guardados</a></li>
-						<li><a href="index.html" class="button special">Cerrar Sesión</a></li>
+						<li><a href="cerrar.html" class="button special">Cerrar Sesión</a></li>
 					</ul>
 				</nav>
 			</header>
